Added unique e-mails validation

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 validation.emptyData=Pole nie może być puste.
 validation.incorrectEmail=Podany e-mail jest nieprawidłowy.
+validation.emailExists=Podany e-mail jest już zarejestrowany.
